# renpy-doomfire

./: .clang-tidy  .cython-lint.toml  .gitignore  LICENSE  README.md  build.sh  doom_fire_cy.pyd  lint.sh  palette.rpy  ruff.toml  script.rpy  setup.py
backend/c/: main.c  main.h
backend/c_xorshift/: main.c  main.h
backend/cy/: doom_fire_cy.pyx  setup.py
backend/cy_extern/: doom_fire_cy_extern.pyx  setup.py
backend/cy_extern_xorshift/: doom_fire_cy_extern_xorshift.pyx  setup.py
backend/cy_randbytes/: doom_fire_cy_rand_bytes.pyx  setup.py
backend/py/: doom_fire_py_randbytes_ren.py  doom_fire_py_ren.py
backend/rust/: Cargo.toml
backend/rust/src/: lib.rs
c_fire/: main.cpp  main.h
cy_fire/: doom_fire_cy.pyx
game/: displayable_base_ren.py  displayable_c.rpy  displayable_cy.rpy  displayable_cy_extern.rpy  displayable_py.rpy  displayable_rust.rpy  doom_fire_c.rpy  doom_fire_py.rpy  palette.rpy  script.rpy
performance/: run.py
